style.css
/* ... */
@media only screen and (min-width: 633px) {
  body {
    
  }
  
  header {
    position: fixed;
    z-index: 2;
    top: 0;
    background-color: #15152A;
    height: 66px;
    width: 100%;
  }
  header h2 {
    position: fixed;
    z-index: 1;
    display: inline-block;
    text-decoration: none;
    transition-duration: .5s;
  }
  header .head-logo {
    position: fixed;
    padding-top: 13px;
    padding-bottom: 13px;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  header .head-logo img {
    display: block;
  }
  
  footer {
    
  }
  footer a {
    color: #000000;
    color: #fff;
  }
  footer .social {
    float: left;
    margin: auto;
    width: 350px;
    height: auto;
    text-align: center;
  }
  footer .social img {
    border-radius: 5px;
    width: 40px;
    height: 40px;
    transition-duration: .3s;
  }
  footer .social img:hover {
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 13px;
    border-radius: 25px;
    box-shadow: 4px 13px 4px #00FFBA52;
  }
  footer .pricon {
    text-decoration: underline;
    text-align: center;
    margin-top: 30px;
  }
  footer .pricon a {
    margin-left: 10px;
    transition-duration: .5s;
  }
  footer .pricon a:hover {
    text-decoration: underline;
    color: #00FFBA;
  }
  footer .year {
    float: right;
    margin-top: 8%;
  }
  
  .rfbstore-footer {
    float: left;
    background-color: #2c2c4d;
    width: 100%;
    height: 55px;
    padding: 5px;
    bottom: 0;
    left: 0;
    display: flex;
    align-items: center;
  }
  .rfbstore-footer .rfbstore-footer_content {
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }
  
  /* other styles -- tablet */
  
  .nav {
    height: 120%;
    width: 250px;
    position: fixed;
    z-index: 3;
    top: 0;
    left: -255px;
    background-color: #15152A;
    overflow: auto;
    padding-top: 60px;
    transition: .4s;
    font-family: 'Poppins', sans-serif;
    box-shadow: 2px 0 3px #00FFBA52;
  }
  .nav .buttons h2 {
    display: block;
    padding: 20px 20px;
    font-size: 40px;
    text-decoration: none;
    transition-duration: .3s;
  }
  .nav .buttons h2:hover {
    color: #00ccff;
  }
  .nav .buttons a {
    display: block;
    padding: 20px 20px;
    font-size: 20px;
    text-decoration: none;
  }
  .nav .buttons a h3 {
    transition-duration: .3s;
  }
  .nav .buttons a h3:hover {
    color: #00ccff;
    margin-left: 10px;
  }
  .nav .buttons a h3 img {
    margin-bottom: -6px;
  }
  .nav h2.close {
    position: absolute;
    top: -16px;
    right: 16px;
    margin-left: 50px;
    font-size: 40px;
  }
  .nav .line {
    display: none;
  }
  .nav .social {
    display: none;
  }
  .body {
    width: 633px;
  }
  .body .rfb-store a button {
    position: absolute;
    left: 16px;
    margin-top: 30px;
    background-color: #00ccff;
    color: #000;
    border: 1px solid #00ccff;
    padding: 10px 20px;
    font-size: 16px;
    border-radius: 5px;
    transition-duration: .2s;
  }
  .body .things-need .things-need-2 .content {
    float: left;
    width: 250px;
    height: 400px;
    margin: 30px;
    margin-bottom: 0;
  }
  .body .things-need .things-need-2 .content .content-container {
    width: auto;
    height: auto;
    padding: 13px;
    border: 8px solid #fff;
    border-radius: 5px;
  }
  .body .pb .ist h1 {
    width: 100%;
    margin-top: 5px;
    vertical-align: top;
    text-overflow: ellipsis;
    white-space: normal;
  }
  .body .pb .irt h1 {
    width: 100%;
    margin-top: 5px;
    vertical-align: top;
    text-overflow: ellipsis;
    white-space: normal;
  }
  .body .pack_download {
    margin-top: 80px;
  }
  .body .circleloop .circle {
    position: absolute;
    background-color: #00FFBA;
    border-radius: 25px;
    width: 10px;
    height: 10px;
    margin-left: -3%;
    margin-top: -5px;
    animation: circleloop_pc 5s infinite;
    animation-fill-mode: forwards;
    animation-delay: 6.6s;
    opacity: 0;
  }
}

@media screen and (min-width:983px) {
  header h2 {
    display: none;
  }
  
  footer .social {
    margin-left: 250px;
  }
  
  .rfbstore-footer .rfbstore-footer_content {
    margin-left: 272px;
  }
  
  /* other styles -- desktop */
  
  .nav {
    display: block;
    height: 120%;
    width: 250px;
    position: fixed;
    z-index: 3;
    top: -60px;
    left: 0;
    background-color: #15152A;
    overflow: auto;
    padding-top: 60px;
    transition: .4s;
    font-family: 'Poppins', sans-serif;
    box-shadow: 2px 0 3px #00FFBA52;
  }
  .nav .buttons h2 {
    display: none;
  }
  .nav .buttons a {
    display: block;
    padding: 20px 20px;
    font-size: 20px;
    text-decoration: none;
  }
  .nav .buttons a h3 {
    transition-duration: .3s;
  }
  .nav .buttons a h3:hover {
    color: #00ccff;
    margin-left: 10px;
  }
  .nav .buttons a h3 img {
    margin-bottom: -6px;
  }
  .nav h2.close {
    position: absolute;
    top: -16px;
    right: 16px;
    margin-left: 50px;
    font-size: 40px;
  }
  .nav .line {
    display: none;
  }
  .nav .social {
    display: none;
  }
  .body {
    display: block;
    left: 250px;
  }
}

/* other styles -- mobile */

img {
  image-rendering: pixelated;
  overflow: hidden;
}

hr {
  height: .5px;
  border: none;
  background: #c2c2c2;
}

.loader {
  background-color: #0f0f19;
  z-index: 2147483647;
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loader img {
  width: 325px;
  height: 590px;
}
.loader.hidden {
  animation: loaded 1s;
  animation-fill-mode: forwards;
}

.popup {
  left: 0;
  top: 0;
  display: flex;
  position: fixed;
  width: 100%;
  min-height: 100vh;
  background-color: #00000052;
  z-index: 2147483646;
  align-items: flex-end;
  justify-content: center;
}
/* ... */

